# kafka-sentinel-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: demo_recording_script.md  launch_checklist.md
examples/: claude_desktop_config.json  seed_demo_data.py
src/kafka_sentinel_mcp/: __init__.py  server.py
tests/: test_server.py
